--- a/index.html
+++ b/index.html
@@ -119,15 +119,16 @@
                           <td class="padding">
                             <table class="content">
                               <tr>
-                                <td>
+                                <td style="text-align: center;">
                                   <img src="https://cdn.logo.com/hotlink-ok/logo-social.png" width="130"
-                                    style="max-width: 130px;">
+                                    style="max-width: 130px; text-align: center;">
                                 </td>
                               </tr>
                               <tr>
                                 <td>
-                                  <p style='font-weight: bold; font-size: 17px'>Title</p>
-                                  <p style="color: black; font-size: 12px;">Lorem ipsum dolor sit amet consectetur
+                                  <p style='font-weight: bold; font-size: 17px; text-align: center'>Title</p>
+                                  <p style="color: black; font-size: 12px; text-align: center">Lorem ipsum dolor sit
+                                    amet consectetur
                                     adipisicing elit.
                                     Ullam praesentium est earum molestias pariatur vitae qui.</p>
                                 </td>
@@ -141,15 +142,16 @@
                           <td class="padding">
                             <table class="content">
                               <tr>
-                                <td>
+                                <td style="text-align: center;">
                                   <img src="https://cdn.logo.com/hotlink-ok/logo-social.png" width="130"
-                                    style="max-width: 130px;">
+                                    style="max-width: 130px; text-align: center;">
                                 </td>
                               </tr>
                               <tr>
                                 <td>
-                                  <p style='font-weight: bold; font-size: 17px'>Title</p>
-                                  <p style="color: black; font-size: 12px;">Lorem ipsum dolor sit amet consectetur
+                                  <p style='font-weight: bold; font-size: 17px; text-align: center'>Title</p>
+                                  <p style="color: black; font-size: 12px; text-align: center">Lorem ipsum dolor sit
+                                    amet consectetur
                                     adipisicing elit.
                                     Ullam praesentium est earum molestias pariatur vitae qui.</p>
                                 </td>
@@ -163,15 +165,16 @@
                           <td class="padding">
                             <table class="content">
                               <tr>
-                                <td>
+                                <td style="text-align: center;">
                                   <img src="https://cdn.logo.com/hotlink-ok/logo-social.png" width="130"
-                                    style="max-width: 130px;">
+                                    style="max-width: 130px; text-align: center;">
                                 </td>
                               </tr>
                               <tr>
                                 <td>
-                                  <p style='font-weight: bold; font-size: 17px'>Title</p>
-                                  <p style="color: black; font-size: 12px;">Lorem ipsum dolor sit amet consectetur
+                                  <p style='font-weight: bold; font-size: 17px; text-align: center;'>Title</p>
+                                  <p style="color: black; font-size: 12px; text-align: center;">Lorem ipsum dolor sit
+                                    amet consectetur
                                     adipisicing elit.
                                     Ullam praesentium est earum molestias pariatur vitae qui.</p>
                                 </td>
